--- a/Uppgift 1/Uppgift 1.html
+++ b/Uppgift 1/Uppgift 1.html
@@ -18,19 +18,9 @@ Vanligtvis så spenderar jag mina lediga minuter i garaget, när jag inte jobbar
 och produktutveckling. Jag tycker att det är intressant och något jag vill jobba med i framtiden.</p>
 <h3>Denna kursen</h3>
 <p>Denna kursen var långt ifrån mitt förstahandsval men jag tycker än så länge att det verkar roligt och <br>
-jag tror att det kan vara releveant till tidigare kurser jag läst & därav intressant.</p> 
+jag tror att det kan vara releveant till tidigare kurser jag läst vilket gör den intressant.</p> 
     <a href="https://teknikum.se/">
         <img src="https://teknikum.se/images/18.27e32b4a180c20075ae2da0d/1652683865301/Teknikum%20toppbild.png" alt="En bild på teknikum" width="1150" height="450">
     </a>
-
-
-
-
-
-
-
-
-
-
 </body>
 </html>
