--- a/Uppgift 1/Uppgift 1.html
+++ b/Uppgift 1/Uppgift 1.html
@@ -22,6 +22,6 @@ jag tror att det kan vara releveant till tidigare kurser jag läst vilket gör d
     <a href="https://teknikum.se/">
         <img src="https://teknikum.se/images/18.27e32b4a180c20075ae2da0d/1652683865301/Teknikum%20toppbild.png" alt="En bild på teknikum" width="1150" height="450">
     </a>
-    <a href="https://teknikum.se/"></a>
+    <a href="https://teknikum.se/">Min skolas webplats</a>
 </body>
 </html>
