--- a/Uppgift 2/uppg2.html
+++ b/Uppgift 2/uppg2.html
@@ -7,7 +7,7 @@
     </head>
     <body> 
         <h1>Lucas Johansson</h1>
-        <p> Jag heter Lucas och går på teknikum i Växjö. 
+        <p class="myself"> Jag heter Lucas och går på teknikum i Växjö. 
             <br> Jag bor med min familj utanför stan och gillar att grejja med bilar. </p>
         <p>
 Vanligtvis så spenderar jag mina lediga minuter i garaget, när jag inte jobbar eller <br>
@@ -15,14 +15,14 @@ Vanligtvis så spenderar jag mina lediga minuter i garaget, när jag inte jobbar
         </p>
 
 <h2>Teknikprogrammet</h2>
-<p>Jag går på Teknikprogrammet här på Teknikum, och jag har inriktning mot teknisk design <br>
+<p class="program">Jag går på Teknikprogrammet här på Teknikum, och jag har inriktning mot teknisk design <br>
 och produktutveckling. Jag tycker att det är intressant och något jag vill jobba med i framtiden.</p>
 <h3>Denna kursen</h3>
-<p>Denna kursen var långt ifrån mitt förstahandsval men jag tycker än så länge att det verkar roligt och <br>
+<p class="toughts">Denna kursen var långt ifrån mitt förstahandsval men jag tycker än så länge att det verkar roligt och <br>
 jag tror att det kan vara releveant till tidigare kurser jag läst vilket gör den intressant.</p> 
     <a href="https://teknikum.se/">
         <img src="https://teknikum.se/images/18.27e32b4a180c20075ae2da0d/1652683865301/Teknikum%20toppbild.png" alt="En bild på teknikum" width="1150" height="450">
     </a>
-    <a href="https://teknikum.se/">Min skolas webplats</a>
+    <p><a href="https://teknikum.se/">Min skolas webplats</a></p>
 </body>
 </html>
