uppg 1 & 2 uppdated and done, uppg 3 started.

--- a/Uppgift 2/uppg2.html
+++ b/Uppgift 2/uppg2.html
@@ -3,7 +3,7 @@
     <head>
         <title>Uppgift 2</title>
             <charset="utf-8">
-        <link href="mystyle.css" rel="stylesheet">
+        <link href="uppg2style.css" rel="stylesheet">
     </head>
     <body> 
         <h1>Lucas Johansson</h1>
