uppg 3 half done

--- a/Uppgift 3/uppg3.html
+++ b/Uppgift 3/uppg3.html
@@ -2,7 +2,7 @@
 <html lang="sv">
     <head>
         <title>Uppgift 2</title>
-            <charset="utf-8">
+            <meta charset="utf-8">
 <link rel="stylesheet" href="uppg3style.css">
     </head>
 <body>
@@ -37,5 +37,15 @@
             <td>3 100 000</td>
             <td>781 000 000</td>
         </tr>
+      </table>
+
+
+      <table> 
+        <tr>
+            <td> </td>
+        </tr>
+
+
+
       </table>
 </body>
