--- a/Uppgift 3/uppg3.html
+++ b/Uppgift 3/uppg3.html
@@ -42,16 +42,16 @@
 <br>
 <table class="colored"> 
         <tr>
-            <td class="1" rowspan="2"> 1 </td>
-            <td class="2" colspan="2"> 2 </td>
+            <td class="first" rowspan="2">  </td>
+            <td class="second" colspan="2">  </td>
       
         </tr>
         <tr>
-          <td> 4 </td>
-          <td rowspan="2"> 5 </td>
+          <td class="fourth"> </td>
+          <td class="fifth" rowspan="2">  </td>
         </tr>
         <tr>
-          <td colspan="2"> 7 </td>
+          <td class="seventh" colspan="2">  </td>
         </tr>
 
       </table>
