--- a/Uppgift 3/uppg3.html
+++ b/Uppgift 3/uppg3.html
@@ -7,6 +7,7 @@
     </head>
 <body>
     <table class="cpus">
+      <caption>Intelproccessorer</caption>
         <tr>
           <th>Namn</th>
           <th>År</th>
@@ -40,7 +41,10 @@
       </table>
 <br>
 <br>
+<br>
+<br>
 <table class="colored"> 
+  <caption>Färgglad Tabell</caption>
         <tr>
             <td class="first" rowspan="2">  </td>
             <td class="second" colspan="2">  </td>
