--- a/Uppgift 1/Uppgift 1.html
+++ b/Uppgift 1/Uppgift 1.html
@@ -2,7 +2,7 @@
 <html lang="sv">
     <head>
         <title>Uppgift 1</title>
-            <charset="utf-8">
+            <meta charset="utf-8">
     </head>
     <body> 
         <h1>Lucas Johansson</h1>
@@ -20,7 +20,8 @@ och produktutveckling. Jag tycker att det är intressant och något jag vill job
 <p>Denna kursen var långt ifrån mitt förstahandsval men jag tycker än så länge att det verkar roligt och <br>
 jag tror att det kan vara releveant till tidigare kurser jag läst vilket gör den intressant.</p> 
     <a href="https://teknikum.se/">
-        <img src="https://teknikum.se/images/18.27e32b4a180c20075ae2da0d/1652683865301/Teknikum%20toppbild.png" alt="En bild på teknikum" width="1150" height="450">
+        <img src="https://teknikum.se/images/18.27e32b4a180c20075ae2da0d/1652683865301/
+        Teknikum%20toppbild.png" alt="En bild på teknikum" width="1150" height="450">
     </a>
     <a href="https://teknikum.se/">Min skolas webplats</a>
 </body>
